force-app/main/default/objects/Fee__c/fields/Case_Application__c.field-meta.xml
<CustomField>
    <fullName>Case_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>