force-app/main/default/objects/Fee__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>