force-app/main/default/objects/Fee__c/fields/Fee_Line_Item_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Fee_Line_Item_Template_Id__c</fullName>
    <label>Fee Line Item Template Id</label>
    <type>TextArea</type>
</CustomField>