force-app/main/default/objects/Fee__c/fields/Manual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Manual_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Fee</label>
    <type>Checkbox</type>
</CustomField>