force-app/main/default/objects/Fee__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Payment_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>