force-app/main/default/objects/Fee__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>