force-app/main/default/objects/Fee__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>