force-app/main/default/objects/Fee__c/fields/Total_With_HST__c.field-meta.xml
<CustomField>
    <fullName>Total_With_HST__c</fullName>
    <label>Total (With HST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>