force-app/main/default/objects/Fee__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <formula>MID(
    Transaction__r.ChargentOrders__Gateway_ID__c,
    FIND(&quot;*&quot;, Transaction__r.ChargentOrders__Gateway_ID__c) + 1,
    LEN(Transaction__r.ChargentOrders__Gateway_ID__c) - FIND(&quot;*&quot;, Transaction__r.ChargentOrders__Gateway_ID__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Id</label>
    <type>Text</type>
</CustomField>